# autotuning_cnn

./: .gitignore  APRENDIZADO.md  CNN_com_flowers.ipynb  PIPELINE.md  README.md  USO_IA.md  dataset.ipynb  main.py  pyproject.toml
