[project]
name = "autotuning-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "polars>=1.41.1",
    "tensorflow[and-cuda]>=2.21.0",
]
